--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             
            <div class="image">
-                <img src="/images/image-qr-code.png" alt="">
+                <img src="image-qr-code.png" alt="">
            </div>
            <div class="text">
                 <h2>Improve your front-end skills by building projects</h2>
